--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,40 @@
 .selected {
     color: red;
 }
+
+h1 {
+    font-size: 42px;
+    height: 88px;
+}
+
+h2 {
+    font-size: 34px;
+    height: 39px;
+}
+
+article {
+    margin: 0 auto;
+    width: 700px;
+}
+
+.shapka > li {
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+    display: inline-block;
+}
+
+.code {
+    font-family: "Courier New", monospace;
+    background-color: lightgrey;
+}
+
+.text {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    text-align:left;
+    line-height:33px;
+    font-size:21px;
+    color:rgba(0,0,0,0.84);
+}
+
 @media (max-width: 800px) {
 /* Тут пиши стили для мобилки.
     Стили применятся только когда страничка будет ≤800px шириной
