simply media 800px

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,9 @@ article {
 }
 
 @media (max-width: 800px) {
-/* Тут пиши стили для мобилки.
-    Стили применятся только когда страничка будет ≤800px шириной
- */
+
+    article {
+        width: 520px;
+    }
+
 }
