--- a/styles.css
+++ b/styles.css
@@ -75,5 +75,23 @@ article {
     article {
         width: 520px;
     }
+    .nav {
+        height: 215px;
+        font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+        background-color: #EFEFEF;
+        padding: 20px 0;
+        box-sizing: border-box;
+    }
+    .nav-item {
+        padding: 5px 0;
+        display: block;
+        list-style: none;
+        height: 25px;
+        font-size: 24px;
+        text-align: left;
+        margin: 0 0 0 20px;
 
+    }
 }
