--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 /* Тут пиши основные стили */
+body {
+    margin: 0;
+}
+
 .header-item {
     height: 84px;
 }
@@ -75,6 +79,7 @@ article {
     article {
         width: 520px;
     }
+
     .nav {
         height: 215px;
         font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
@@ -84,6 +89,7 @@ article {
         padding: 20px 0;
         box-sizing: border-box;
     }
+
     .nav-item {
         padding: 5px 0;
         display: block;
@@ -92,6 +98,5 @@ article {
         font-size: 24px;
         text-align: left;
         margin: 0 0 0 20px;
-
     }
 }
